--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 			<h1 class="smcircle1">04</h1>
 		</div>
 		    <!-- sec class -->
-			<div class="sec">
-				<a href="D:\€USman$♥@{DON}{YoYo}★\my all folders\Dom code editing\all best project\premium webs\CYBERFICTION-IMAGES\viewsite USMANWEBS.html"><h4>CYBERFICTION</h4></a>
+			<div>
+				ml"><h4>CYBERFICTION</h4></a>
 				<h6>USMAN WEBS*</h6>
 			</div>
 		</div>
